# model-output-review-demo

./: Makefile  README.md  pyproject.toml
data/: corrections.csv  predictions.csv
examples/: final_labels.csv  review_queue.csv  review_report.md
src/model_output_review/: __init__.py  __main__.py  cli.py  io.py  review.py
tests/: test_cli.py  test_review.py
